# authmanager

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  README.md  sgx2-env  sgx2-env.sh
.circleci/: config.yml
.config/: nextest.toml
.github/workflows/: trigger-circleci.yml
auth-manager/: Cargo.toml
auth-manager-tonic/: Cargo.toml  build.rs
auth-manager-tonic/src/: lib.rs
auth-manager/src/: config.rs  lib.rs  main.rs  unified_attestation_wrapper.rs
auth-manager/src/server/: constant.rs  create_data_mac_key_impl.rs  create_data_with_auth_impl.rs  get_compute_meta_impl.rs  get_export_data_key_impl.rs  get_ra_cert_pems_impl.rs  mod.rs  register_ins_pub_key_impl.rs
auth-manager/src/storage/: memory_client.rs  mod.rs  remote_storage_client.rs  storage_wrapper.rs
auth-manager/src/utils/: mod.rs
auth-manager/src/utils/crypto/: decrypter.rs  encrypter.rs  hmac.rs  mod.rs  rsa.rs  scheme.rs  sha.rs  signer.rs  sm2.rs  verifier.rs
auth-types/: Cargo.toml
auth-types/src/: error.rs  lib.rs  retcode.rs
deployment/: Dockerfile  build.sh  production.Dockerfile  simulation.Dockerfile
deployment/conf/: config.yaml  unified_attestation.json
docker/: Dockerfile  sgx_default_qcnl.conf
second_party/unified_attestation/: Cargo.toml  build.rs  compile.sh
second_party/unified_attestation/src/ua_gen/: c_binding_ua_gen.rs
second_party/unified_attestation/src/ua_val/: c_binding_ua_val.rs
