[package]
name = "auth-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
production = []

[dependencies]
auth-manager-tonic = { path = "../auth-manager-tonic" }
unified_attestation = { path = "../second_party/unified_attestation", features=["ua_gen"]}
auth-types = { path = "../auth-types" }
tonic = { version = "0.8", features = ["tls"] }
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
log = "0.4"
log4rs = "1.0.0"
clap = { version = "4.2.7", features = ["derive"]}
indoc = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
reqwest-retry = "0.1.5"
reqwest-middleware = "0.1.6"
bytes = { version = "1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
openssl-sys = "0.9"
openssl = { version = "0.10", features = ["vendored"] }
paste = "1.0"
serde_json = "1.0"
pkcs8 = { version = "0.9.0", features = ["alloc", "pem", "std"] }
sec1 = { version = "0.3.0", features = ["alloc", "pkcs8", "pem", "std"] }
async-trait = "0.1.64"
base64 = "0.21.0"
hex = "0.4.3"
merge = "0.1.0"
